--- a/article_karoline.html
+++ b/article_karoline.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Læs om Karolines personlige rejse med at vælge alkoholen fra. I dette interview deler hun sine erfaringer og de positive forandringer, det har medført i hendes liv. Udforsk også vores sortiment af alkoholfri øl, der inkluderer sæson øl, kalorielette øl og en klassisk pilsner med fokus på den gode klassiske ølsmag. Vores produkter er designet til at levere en autentisk øloplevelse med fokus på kvalitet, bæredygtighed og sammenhold.">
+    <meta name="keywords"content="Bæredygtigt Emballage, nej tak til akohol, Alkoholfri Øl, Øl der samler os, ZEROBUZZ BREW, sammenhold, interview, gen-z, sober-curious">
     <title>Zero Buzz Brew</title>
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/article_karoline.css">
