--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Katrine Guldager S">
     <title>ZEROBUZZ BREW</title>
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/index..css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
