herosize correction and instagram logo resized

--- a/article_karoline.html
+++ b/article_karoline.html
@@ -166,7 +166,7 @@
             <P>ZerobuzzBrew@gmail.com</P>
 
             <div class="socialmedia">
-                <img src="img/instagram.png" alt="instagramlogo">
+                <img src="img/instagram_resized.png" alt="instagramlogo">
                 <img src="img/tiktok.webp" alt="tiktoklogo">
             </div>
   
