--- a/article_emballage.html
+++ b/article_emballage.html
@@ -148,7 +148,7 @@
             <P>ZerobuzzBrew@gmail.com</P>
 
             <div class="socialmedia">
-                <img src="img/instagram.png" alt="instagramlogo">
+                <img src="img/instagram_resized.png" alt="instagramlogo">
                 <img src="img/tiktok.webp" alt="tiktoklogo">
             </div>
   
