--- a/article_emballage.html
+++ b/article_emballage.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="header-wrapper">
-            <a href="/"><img src="img/logohjemmeside.png" class="header-logo" alt="ZeroBuzz Logo"></a>
+            <a href="index.html"><img src="img/logohjemmeside.png" class="header-logo" alt="ZeroBuzz Logo"></a>
             <nav>
                 <input type="checkbox" id="burger-toggle" class="burger-toggle">
                 <label for="burger-toggle" class="burger-menu">
